# onvif-rs

./: Cargo.toml  README.md
include/: Discovery.xml  Discovery_Authenticated.xml  Discovery_Unauthenticated.xml  SystemDatetime.xml  namespaces.txt
src/: main.rs  onvif.rs
src/onvif/: namespaces.rs
src/onvif/namespaces/: _tt.rs  tt.rs
src/onvif/namespaces/_tt/: common.xsd  common_xsd.rs  onvif.xsd
src/onvif/namespaces/tt/: common.xsd  common_xsd.rs  onvif_xsd.rs
