[package]
name = "onvif"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
color-eyre = "0.6.5"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "client"] }
hyper-util = { version = "0.1.17", features = ["http1", "client"] }
rand = "0.9.2"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
